Enable HTML in GraphicalTail, and make it read only

--- a/src/GraphicalTailForm.ui
+++ b/src/GraphicalTailForm.ui
@@ -54,7 +54,11 @@
     </widget>
    </item>
    <item row="0" column="0" colspan="3">
-    <widget class="QTextEdit" name="textWidget"/>
+    <widget class="QTextEdit" name="textWidget">
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
